# auraflow

./: CMakeLists.txt  PROJECT_SPEC.md  README.md
assets/themes/: README.md  default_dark.json
docs/api/: c_plugin_api.md  lua_scripting_api.md
docs/developer/: building_from_source.md  core_architecture.md  index.md  plugin_development.md
docs/user/: data_sources.md  getting_started.md  index.md  processing_pipeline.md  scripting.md  visualizations.md
include/auraflow/: auraflow_core.h  auraflow_plugin_api.h
plugins_dev/data_sources/example_csv_reader/: CMakeLists.txt
plugins_dev/processing_nodes/example_filter_node/: CMakeLists.txt
plugins_dev/visualizations/example_custom_plot/: CMakeLists.txt
scripts/: main_user_startup.lua
src/: CMakeLists.txt  main.c
src/core/: auraflow_core.c  data_manager.c  data_manager.h  event_system.c
src/data_pipeline/: builtin_nodes.c  pipeline_executor.c
src/data_sources/: generator_source.c  generator_source.h
src/plugin_system/: plugin_manager.c
src/scripting_interface/: lua_bindings.c  scripting_manager.h
src/ui/: node_editor.c  ui_manager.c  ui_manager.h
src/ui/visualizations/: line_chart_widget.c  line_chart_widget.h
tests/: CMakeLists.txt
tests/integration/: test_pipeline_flow.c
tests/unit/: test_example.c
